@@ -32,6 +32,7 @@ admin.caption.dbcp.whenexhaustedaction.block=Bloker
 admin.caption.dbcp.whenexhaustedaction.fail=Fejl
 admin.caption.dbcp.whenexhaustedaction.grow=Voks
 admin.caption.defaulttopic=Standard emne
+admin.caption.externallinknewwindow=Open external links in new window
 admin.caption.filedir=Fil-system folder
 admin.caption.filedirhelp=Et eksisterende folder i hvilken JAMWiki system filer kan lagres.
 admin.caption.forceusername=Tving brug af brugernavn
