@@ -32,6 +32,7 @@ admin.caption.dbcp.whenexhaustedaction.block=Bloquear
 admin.caption.dbcp.whenexhaustedaction.fail=Fallar
 admin.caption.dbcp.whenexhaustedaction.grow=Crecer
 admin.caption.defaulttopic=Asunto por defecto
+admin.caption.externallinknewwindow=Open external links in new window
 admin.caption.filedir=Directorio del sistema de ficheros
 admin.caption.filedirhelp=An existing directory in which JAMWiki system files can be stored.
 admin.caption.forceusername=Forzar poner usuario
