@@ -32,6 +32,7 @@ admin.caption.dbcp.whenexhaustedaction.block=Blokkol\u00E1s
 admin.caption.dbcp.whenexhaustedaction.fail=\u00DAj eszk\u00F6z
 admin.caption.dbcp.whenexhaustedaction.grow=N\u00F6vel\u00E9s
 admin.caption.defaulttopic=Alap\u00E9rtelmezett sz\u00F3cikk
+admin.caption.externallinknewwindow=Open external links in new window
 admin.caption.filedir=F\u00E1jlrendszer k\u00F6nyvt\u00E1r
 admin.caption.filedirhelp=Egy l\u00E9tez\u0151 k\u00F6nyvt\u00E1r, amiben a JAMWiki rendesz f\u00E1jlai t\u00E1rol\u00F3dnak.
 admin.caption.forceusername=Felhaszn\u00E1l\u00F3nevet k\u00F6telez\u00F5 be\u00E1ll\u00EDtani
