@@ -32,6 +32,7 @@ admin.caption.dbcp.whenexhaustedaction.block=\u7A7A\u304F\u306E\u3092\u5F85\u306
 admin.caption.dbcp.whenexhaustedaction.fail=\u64CD\u4F5C\u3092\u5931\u6557\u3055\u305B\u308B
 admin.caption.dbcp.whenexhaustedaction.grow=\u30D7\u30FC\u30EB\u3092\u62E1\u5927\u3059\u308B
 admin.caption.defaulttopic=\u30C7\u30D5\u30A9\u30EB\u30C8\u306E\u8A18\u4E8B
+admin.caption.externallinknewwindow=Open external links in new window
 admin.caption.filedir=\u30D5\u30A1\u30A4\u30EB\u30B7\u30B9\u30C6\u30E0\u306E\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA
 admin.caption.filedirhelp=JAMWiki\u306E\u30B7\u30B9\u30C6\u30E0\u30D5\u30A1\u30A4\u30EB\u3092\u683C\u7D0D\u3067\u304D\u308B\u3001\u4F5C\u6210\u6E08\u307F\u306E\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA
 admin.caption.forceusername=\u30E6\u30FC\u30B6\u540D\u3092\u5FC5\u305A\u6307\u5B9A\u3055\u305B\u308B
