@@ -32,6 +32,7 @@ admin.caption.dbcp.whenexhaustedaction.block=Blokk
 admin.caption.dbcp.whenexhaustedaction.fail=Feile
 admin.caption.dbcp.whenexhaustedaction.grow=Vokse
 admin.caption.defaulttopic=Standardemne
+admin.caption.externallinknewwindow=Open external links in new window
 admin.caption.filedir=Filsystemmappe
 admin.caption.filedirhelp=An existing directory in which JAMWiki system files can be stored.
 admin.caption.forceusername=Fremtving ansetning av brukernavn
