@@ -32,6 +32,7 @@ admin.caption.dbcp.whenexhaustedaction.block=Block
 admin.caption.dbcp.whenexhaustedaction.fail=Fail
 admin.caption.dbcp.whenexhaustedaction.grow=Grow
 admin.caption.defaulttopic=Standardsida
+admin.caption.externallinknewwindow=Open external links in new window
 admin.caption.filedir=Filsystemkatalog
 admin.caption.filedirhelp=An existing directory in which JAMWiki system files can be stored.
 admin.caption.forceusername=Tvinga anv\u00E4ndning av anv\u00E4ndarnamn
