@@ -32,6 +32,7 @@ admin.caption.dbcp.whenexhaustedaction.block=\u963B\u6B62
 admin.caption.dbcp.whenexhaustedaction.fail=\u820D\u5F03
 admin.caption.dbcp.whenexhaustedaction.grow=\u6269\u5927
 admin.caption.defaulttopic=\u9ED8\u8BA4\u4E3B\u9898
+admin.caption.externallinknewwindow=Open external links in new window
 admin.caption.filedir=\u7CFB\u7EDF\u6587\u4EF6\u76EE\u5F55
 admin.caption.filedirhelp=\u662F\u6307\u5F53\u524D\u7528\u6765\u5B58\u50A8 JAMWiki \u7CFB\u7EDF\u6587\u4EF6\u7684\u76EE\u5F55\u3002
 admin.caption.forceusername=\u52A0\u5F3A\u7528\u6237\u8BBE\u7F6E\uFF08\u6CE8\u518C\u7528\u6237\u624D\u80FD\u4FEE\u6539\uFF09
