@@ -32,6 +32,7 @@ admin.caption.dbcp.whenexhaustedaction.block=\u963B\u6B62
 admin.caption.dbcp.whenexhaustedaction.fail=\u6368\u68C4
 admin.caption.dbcp.whenexhaustedaction.grow=\u64F4\u5927
 admin.caption.defaulttopic=\u9ED8\u8A8D\u4E3B\u984C
+admin.caption.externallinknewwindow=Open external links in new window
 admin.caption.filedir=\u7CFB\u7D71\u6587\u4EF6\u76EE\u9304
 admin.caption.filedirhelp=\u662F\u6307\u7576\u524D\u7528\u4F86\u5B58\u5132 JAMWiki \u7CFB\u7D71\u6587\u4EF6\u7684\u76EE\u9304\u3002
 admin.caption.forceusername=\u52A0\u5F37\u7528\u6236\u8A2D\u7F6E\uFF08\u8A3B\u518A\u7528\u6236\u624D\u80FD\u4FEE\u6539\uFF09
